# tap-chameleon

./: MANIFEST.in  README.md  meltano.yml  pyproject.toml  setup.py  tap-chameleon.sh  tox.ini
tap_chameleon/: default_loggging.yml  streams.py  tap.py
