[tool.poetry]
name = "tap-chameleon"
version = "0.0.1"
description = "`tap-chameleon` is Singer-compliant chameleon tap built with Singer SDK."
authors = ["Derek Visch <dvisch@autoidm.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.11"
requests = "^2.25.1"
singer-sdk = "^0.45.4"
cryptography = "^44.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
viztracer = "^0.15.4"
virtualenv = { version = "^20.26.6", python = ">=3.8,<3.11", markers = "python_version >= '3.8'" }

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_chameleon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-chameleon = 'tap_chameleon.tap:cli'
